--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      GOLDENDIE is a brand of LKT Group GmbH that supplies technical spare parts for industrial equipment, including
+      GOLDENMILL is a brand of LKT Group GmbH that supplies technical spare parts for industrial equipment, including
       dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for
       hammer mills and separators
     </title>
     <meta
       name="description"
-      content="GOLDENDIE LKT Group GmbH, technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators, production, manufacturing of spare parts and engineering components according to customer drawings"
+      content="GOLDENMILL LKT Group GmbH, technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators, production, manufacturing of spare parts and engineering components according to customer drawings"
     />
   </head>
   <body>
